--- a/package.json
+++ b/package.json
@@ -1,17 +1,67 @@
 {
-  "name": "parcel-sandbox",
-  "version": "1.0.0",
-  "description": "Marble Attractor",
-  "main": "index.html",
-  "scripts": {
-    "start": "parcel index.html --open",
-    "build": "parcel build index.html"
-  },
-  "dependencies": {
-    "gsap": "2.0.1",
-    "three": "0.95.0"
-  },
-  "devDependencies": {
-    "parcel-bundler": "^1.6.1"
-  }
+    "name": "marble-attractor",
+    "version": "2.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "webpack-dev-server --config build/webpack/webpack.dev.js --mode development",
+        "build": "webpack --config build/webpack/webpack.prod.js --mode production",
+        "roll": "rollup -c build/rollup/rollup.config.js",
+        "preview": "npm run build && http-server dist"
+    },
+    "repository": {
+        "type": "git",
+        "url": ""
+    },
+    "globals": {
+        "THREE": "three",
+        "TweenMax": [
+            "gsap",
+            "TweenMax"
+        ]
+    },
+    "keywords": [],
+    "author": "Ivan Juarez",
+    "license": "ISC",
+    "bugs": {
+        "url": ""
+    },
+    "homepage": "",
+    "dependencies": {
+        "gsap": "^2.0.1",
+        "normalize.css": "^8.0.0",
+        "three": "^0.95.0"
+    },
+    "devDependencies": {
+        "ajv": "^6.3.0",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.4",
+        "babel-plugin-external-helpers": "^6.22.0",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-register": "^6.26.0",
+        "babelrc-rollup": "^3.0.0",
+        "clean-webpack-plugin": "^0.1.19",
+        "css-loader": "^0.28.11",
+        "cssnano": "^3.10.0",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "favicons-webpack-plugin": "0.0.8",
+        "file-loader": "^1.1.11",
+        "html-webpack-plugin": "^3.1.0",
+        "http-server": "^0.11.1",
+        "optimize-css-assets-webpack-plugin": "^4.0.0",
+        "postcss-loader": "^2.1.3",
+        "rollup": "^0.64.1",
+        "rollup-plugin-babel": "^3.0.7",
+        "source-map-loader": "^0.2.3",
+        "style-loader": "^0.20.3",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^3.0.2",
+        "url-loader": "^1.0.1",
+        "webpack": "^4.2.0",
+        "webpack-cli": "^2.0.13",
+        "webpack-dev-server": "^3.1.1"
+    }
 }
