--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "TweenMax": [
             "gsap",
             "TweenMax"
-        ]
+        ],
+        "dat": "dat.gui"
     },
     "keywords": [],
     "author": "Ivan Juarez",
@@ -29,6 +30,7 @@
     },
     "homepage": "",
     "dependencies": {
+        "dat.gui": "^0.7.2",
         "gsap": "^2.0.1",
         "normalize.css": "^8.0.0",
         "three": "^0.95.0"
